<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.robie.craftengineconverter</groupId>
    <artifactId>CraftEngineConverter</artifactId>
    <version>0.0.2</version>
    <packaging>pom</packaging>

    <name>CraftEngineConverter</name>
    <modules>
        <module>API</module>
        <module>Common</module>
        <module>Hooks</module>
        <module>Plugin</module>
    </modules>

    <profiles>
        <profile>
            <id>dev-build</id>
            <properties>
                <dev.suffix>-Dev</dev.suffix>
            </properties>
        </profile>
    </profiles>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>

        <plugin.author>1robie</plugin.author>
        <plugin.description>A plugin to convert configurations to CraftEngine format</plugin.description>
        <plugin.apiVersion>1.21</plugin.apiVersion>
        <plugin.mainClass>fr.robie.craftengineconverter.CraftEngineConverter</plugin.mainClass>

        <plugin.finalVersion>${project.version}${dev.suffix}</plugin.finalVersion>
        <dev.suffix/>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>fr.robie.craftengineconverter</groupId>
                <artifactId>API</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.robie.craftengineconverter</groupId>
                <artifactId>Common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.robie.craftengineconverter</groupId>
                <artifactId>BOM</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Paper -->
            <dependency>
                <groupId>io.papermc.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>1.21.10-R0.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>

            <!-- Bstats -->
            <dependency>
                <groupId>org.bstats</groupId>
                <artifactId>bstats-bukkit</artifactId>
                <version>3.1.0</version>
            </dependency>

            <dependency>
                <groupId>org.bstats</groupId>
                <artifactId>bstats-base</artifactId>
                <version>3.1.0</version>
            </dependency>

            <!-- PacketEvents -->
            <dependency>
                <groupId>com.github.retrooper</groupId>
                <artifactId>packetevents-spigot</artifactId>
                <version>2.11.1</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>net.momirealms</groupId>
                <artifactId>craft-engine-core</artifactId>
                <version>0.0.66.18.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>net.momirealms</groupId>
                <artifactId>craft-engine-bukkit</artifactId>
                <version>0.0.66.18.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>

            <!-- PlaceholderAPI -->
            <dependency>
                <groupId>me.clip</groupId>
                <artifactId>placeholderapi</artifactId>
                <version>2.11.7</version>
                <scope>provided</scope>
            </dependency>

            <!-- Nexo -->
            <dependency>
                <groupId>com.nexomc</groupId>
                <artifactId>nexo</artifactId>
                <version>1.16.1</version>
                <exclusions>
                    <exclusion>
                        <groupId>dev.triumphteam</groupId>
                        <artifactId>triumph-gui</artifactId>
                    </exclusion>
                </exclusions>
                <scope>provided</scope>
            </dependency>

            <!-- ItemsAdder -->
            <dependency>
                <groupId>dev.lone</groupId>
                <artifactId>api-itemsadder</artifactId>
                <version>4.0.10</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-api</artifactId>
                <version>4.25.0</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>fr.maxlego08.sarah</groupId>
                <artifactId>sarah</artifactId>
                <version>1.21.3</version>
                <scope>compile</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <defaultGoal>clean package</defaultGoal>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.1</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <release>${maven.compiler.release}</release>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                    <configuration>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.1</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>tcoded-releases</id>
            <url>https://repo.tcoded.com/releases</url>
        </repository>

        <!-- PlaceholderAPI -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/releases/</url>
        </repository>

        <!-- PacketEvents -->
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>

        <!-- Nexo -->
        <repository>
            <id>nexo-repo</id>
            <url>https://repo.nexomc.com/releases</url>
        </repository>

        <!-- ItemsAdder -->
        <repository>
            <id>matteodev</id>
            <url>https://maven.devs.beer/</url>
        </repository>

        <!-- Craft Engine -->
        <repository>
            <id>xiaomomi's plugins-releases</id>
            <name>XiaoMoMi's Plugin Repository</name>
            <url>https://repo.momirealms.net/releases</url>
        </repository>
        <repository>
            <id>xiaomomi's plugins-snapshots</id>
            <name>XiaoMoMi's Plugin Repository</name>
            <url>https://repo.momirealms.net/snapshots</url>
        </repository>

        <repository>
            <id>groupez</id>
            <url>https://repo.groupez.dev/releases</url>
        </repository>


        <repository>
            <id>central-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </repository>
    </repositories>
</project>
